<resources>
    <string name="app_name">TeamBuildingApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>

    <string name="forgot_password">Forgot Password</string>

    <string name="email">Email</string>
    <string name="send">Send</string>

    <string name="create_account">Create Account</string>

    <string name="name">Name</string>
    <string name="gender">Gender</string>


    <string name="already_has_account">Already have an account?</string>

    <string name="birthday">Birthday</string>
    <string-array name="array_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_morning">Good morning !</string>

    <string name="btn_day_text">Day %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">Good morning!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="overview">Overview</string>
    <string name="logout">Log Out</string>

    <string name="description">Description:</string>
    <string name="attendants">Attendants:</string>

    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempus vel lectus sed convallis. Pellentesque sollicitudin mauris magna. Vivamus commodo tellus tincidunt tincidunt accumsan. Vestibulum fringilla elementum urna, eget pulvinar risus. Ut ornare convallis mauris, ut blandit felis hendrerit non. </string>

    <string name="auth_failed">Authentication failed.Please check your inputs.</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>

    <string name="create_event">Create Event</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description_hint">Description</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>

    <string name="submit">Submit</string>
</resources>
