<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ico_home"
            android:title="@string/home" />
    </group>

    <group android:id="@+id/grp1">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ico_overview"
            android:title="@string/overview" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ico_settings"
            android:title="@string/action_settings" />
    </group>

    <group android:id="@+id/grp3">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ico_logoout"
            android:title="@string/logout" />
    </group>


</menu>
