<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ico_image" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="30dp">

        <EditText
            android:id="@+id/et_title"
            style="@style/createAccountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_edit"
            android:drawableStart="@drawable/ico_edit"
            android:hint="@string/title"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_location"
            style="@style/createAccountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_place"
            android:drawableStart="@drawable/ico_place"
            android:hint="@string/location"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_description"
            style="@style/createAccountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_event_description"
            android:drawableStart="@drawable/ico_event_description"
            android:hint="@string/description_hint" />

        <TextView
            android:id="@+id/tv_start_time"
            style="@style/createAccountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_event_start"
            android:drawableStart="@drawable/ico_event_start"
            android:hint="@string/start_time" />


        <TextView
            android:id="@+id/tv_end_time"
            style="@style/createAccountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_event_end"
            android:drawableStart="@drawable/ico_event_end"
            android:text="@string/end_time" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-light"
            android:padding="10dp"
            android:text="@string/create_event"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/pb_creating_event"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:visibility="gone" />


    </LinearLayout>


</LinearLayout>
