<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.razvan.teambuildingapp.CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <ProgressBar
            android:id="@+id/pb_loading_avatar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_name"
            style="@style/createAccountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_user"
            android:drawableStart="@drawable/ico_user"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_email"
            style="@style/createAccountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_mail"
            android:drawableStart="@drawable/ico_mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            style="@style/createAccountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_password"
            android:drawableStart="@drawable/ico_password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_birthday"
            style="@style/createAccountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_calendar"
            android:drawableStart="@drawable/ico_calendar"
            android:hint="@string/birthday"
            android:inputType="date" />


        <TextView
            android:id="@+id/tv_gender"
            style="@style/createAccountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_gender"
            android:drawableStart="@drawable/ico_gender"
            android:text="@string/gender" />


        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ico_gender"
            android:drawableStart="@drawable/ico_gender"

            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-light"
            android:padding="10dp"
            android:text="@string/submit"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>
