<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_log_in"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="155dp"
                android:layout_weight="0.5" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/logo_centric" />

            <View
                android:layout_width="0dp"
                android:layout_height="155dp"
                android:layout_weight="0.5" />

        </LinearLayout>


        <LinearLayout
            style="@style/marginLeftRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <EditText
                style="@style/basicInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_user"
                android:drawableStart="@drawable/ico_user"
                android:hint="@string/username" />

            <EditText
                style="@style/basicInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_password"
                android:drawableStart="@drawable/ico_password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                style="@style/basicInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/create_account"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/forgot_password"

                    android:textColor="@color/white" />

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>

