<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.razvan.teambuildingapp.CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="25dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/ico_back"
                android:layout_width="wrap_content"
                android:layout_height="16sp"
                android:src="@drawable/ico_back" />

            <TextView
                style="@style/textFontFamilyLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:id="@+id/textView" />

            <ImageView
                android:id="@+id/ico_submit"
                android:layout_width="wrap_content"
                android:layout_height="16sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ico_check" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_image"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name"
                style="@style/createAccountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_user"
                android:drawableStart="@drawable/ico_user"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_email"
                style="@style/createAccountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_mail"
                android:drawableStart="@drawable/ico_mail"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                style="@style/createAccountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_password"
                android:drawableStart="@drawable/ico_password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_birthday"
                style="@style/createAccountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_calendar"
                android:drawableStart="@drawable/ico_calendar"
                android:hint="@string/birthday"
                android:inputType="date" />


            <TextView
                android:id="@+id/tv_gender"
                style="@style/createAccountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_gender"
                android:drawableStart="@drawable/ico_gender"
                android:text="@string/gender" />


            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ico_gender"
                android:drawableStart="@drawable/ico_gender"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ProgressBar
                android:id="@+id/pb_register_loading"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_has_account"
                    android:textColor="@color/colorTextSecondary" />

                <TextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorText" />

            </LinearLayout>




        </LinearLayout>


    </ScrollView>

</LinearLayout>
